--- a/index.html
+++ b/index.html
@@ -1,40 +1,155 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Сложно сосредоточиться</title>
-  </head>
-  <body class="page">
-    <header class="header decorated-zone">
-      <nav class="header__theme-menu">
-        <ul class="header__theme-menu-list">
-          <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_type_light"
-            >
-              День
-            </button>
-          </li>
-          <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-              disabled
-            >
-              Авто
-            </button>
-          </li>
-          <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_type_dark"
-            >
-              Неон
-            </button>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <script src="./scripts/script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="color-scheme" content="dark light">
+  <title>Сложно сосредоточиться</title>
+  <link rel="stylesheet" href="./styles/globals.css">
+  <link rel="stylesheet" href="./styles/variables.css">
+  <link rel="stylesheet" href="./fonts/fonts.css">
+  <link rel="stylesheet" href="./styles/dark.css">
+  <link rel="stylesheet" href="./styles/light.css">
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body class="page">
+  <header class="header decorated-zone">
+    <div class="decoration">REC</div>
+    <nav class="header__theme-menu">
+      <ul class="header__theme-menu-list">
+        <li class="header__theme-menu-item">
+          <button class="header__theme-menu-button header__theme-menu-button_type_light">
+            день
+          </button>
+        </li>
+        <li class="header__theme-menu-item">
+          <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+            disabled>
+            авто
+          </button>
+        </li>
+        <li class="header__theme-menu-item">
+          <button class="header__theme-menu-button header__theme-menu-button_type_dark">
+            неон
+          </button>
+        </li>
+      </ul>
+    </nav>
+    <div class="title_container">
+      <h1 class="title">no focus</h1>
+    </div>
+    <div class="subtitle_container">
+      <p class="subtitle header_subtitle">Что делать, когда не можешь делать ничего<br>
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+    </div>
+  </header>
+  <main class="main">
+    <section class="section">
+      <h2 class="section_title">Почему сосредоточиться так сложно</h2>
+      <article class="section_block">
+        <h3 class="section_subtitle subtitle">Многозадачность</h3>
+        <p class="section_text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же
+          легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том,
+          что её просто не существует. Исследователи
+          <a class="link" target="_blank" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/">выяснили</a>
+          , что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает
+          несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
+          работаем невнимательно: ошибаемся и быстро устаём.
+        </p>
+      </article>
+      <article class="section_block">
+        <h3 class="section_subtitle subtitle">Дофамин</h3>
+        <p class="section_text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности
+          сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе
+          вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для
+          мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие.
+          Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+      </article>
+    </section>
+    <section class="section">
+      <h2 class="section_title">Что снижает концентрацию внимания?</h2>
+      <article class="section_block">
+        <h3 class="section_subtitle subtitle">Многозадачность</h3>
+        <p class="section_text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко
+          меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности.
+          Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она
+          может не выдержать, если не давать ей отдохнуть.</p>
+      </article>
+      <article class="section_block">
+        <h3 class="section_subtitle subtitle">Еда</h3>
+        <p class="section_text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию
+          и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем
+          на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и
+          сонливость. И хотим ещё больше быстрых углеводов.</p>
+      </article>
+      <article class="section_block">
+        <h3 class="section_subtitle subtitle">Гаджеты</h3>
+        <p class="section_text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а
+          на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи
+          на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20
+          минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы
+          вернуться к работе.</p>
+      </article>
+    </section>
+    <section class="section">
+      <h2 class="section_title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+      <div class="section_block">
+        <h3 class="section_subtitle subtitle">5 простых (на самом деле не очень) советов</h3>
+        <article class="block">
+          <h4 class="section_subtitle sub subtitle">Представьте небо и облака</h4>
+          <p class="section_text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь
+            часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты
+            можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни
+            было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться
+            в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
+        </article>
+        <article class="block">
+          <h4 class="section_subtitle sub subtitle">Включите музыку</h4>
+          <p class="section_text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными
+            эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+            попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
+        </article>
+        <article class="block">
+          <h4 class="section_subtitle sub subtitle">Прогуляйтесь</h4>
+          <p class="section_text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+            <a class="link" target="_blank"
+              href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>
+            , что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она
+            наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит
+            ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный
+            вариант.
+          </p>
+        </article>
+        <article class="block">
+          <h4 class="section_subtitle sub subtitle">Хорошо ешьте</h4>
+          <p class="section_text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют
+            резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+            чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
+        </article>
+        <article class="block">
+          <h4 class="section_subtitle sub subtitle">Читайте</h4>
+          <p class="section_text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в
+            соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на
+            несколько часов и круто тренирует направленное внимание.</p>
+        </article>
+      </div>
+    </section>
+    <section class="section">
+      <h3 class="section_subtitle subtitle">А можно в картинках?</h3>
+      <div class="block_images">
+        <img class="img1 img" loading="lazy" src="images/sunset.png" alt="небо и облака">
+        <img class="img2 img" loading="lazy" src="images/ice-cream.png" alt="тарелка с едой">
+        <img class="img3 img" loading="lazy" src="images/tape.png" alt="музыкальная касета">
+        <img class="img4 img" loading="lazy" src="images/books.png" alt="стопка книг">
+        <img class="img5 img" loading="lazy" src="images/street.png" alt="улица">
+      </div>
+    </section>
+  </main>
+  <footer class="footer decorated-zone">
+    <h2 class="title footer-title">focus</h2>
+  </footer>
+  <script src="./scripts/script.js"></script>
+</body>
 </html>
