--- a/index.html
+++ b/index.html
@@ -98,23 +98,18 @@
     </section>
     <section class="section">
       <h2 class="section_title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-      <div class="section_block">
+      <article class="section_block">
         <h3 class="section_subtitle subtitle">5 простых (на самом деле не очень) советов</h3>
-        <article class="block">
           <h4 class="section_subtitle sub subtitle">Представьте небо и облака</h4>
           <p class="section_text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь
             часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты
             можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни
             было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться
             в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
-        </article>
-        <article class="block">
           <h4 class="section_subtitle sub subtitle">Включите музыку</h4>
           <p class="section_text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными
             эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
             попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
-        </article>
-        <article class="block">
           <h4 class="section_subtitle sub subtitle">Прогуляйтесь</h4>
           <p class="section_text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
             <a class="link" target="_blank"
@@ -124,20 +119,15 @@
             ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный
             вариант.
           </p>
-        </article>
-        <article class="block">
           <h4 class="section_subtitle sub subtitle">Хорошо ешьте</h4>
           <p class="section_text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют
             резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
             чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
-        </article>
-        <article class="block">
           <h4 class="section_subtitle sub subtitle">Читайте</h4>
           <p class="section_text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в
             соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на
             несколько часов и круто тренирует направленное внимание.</p>
-        </article>
-      </div>
+      </article>
     </section>
     <section class="section">
       <h3 class="section_subtitle subtitle">А можно в картинках?</h3>
