--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
       </article>
     </section>
-    <section class="section">
+    <section class="section column_block">
       <h2 class="section_title">Что снижает концентрацию внимания?</h2>
       <article class="section_block">
         <h3 class="section_subtitle subtitle">Многозадачность</h3>
@@ -96,7 +96,7 @@
           вернуться к работе.</p>
       </article>
     </section>
-    <section class="section">
+    <section class="section block">
       <h2 class="section_title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
       <article class="section_block">
         <h3 class="section_subtitle subtitle">5 простых (на самом деле не очень) советов</h3>
@@ -129,7 +129,7 @@
             несколько часов и круто тренирует направленное внимание.</p>
       </article>
     </section>
-    <section class="section">
+    <section class="section block">
       <h3 class="section_subtitle subtitle">А можно в картинках?</h3>
       <div class="block_images">
         <img class="img" loading="lazy" src="./images/sunset.png" alt="небо и облака">
